--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.6.8",
+    "framer-motion": "^11.13.5",
     "next": "15.1.0",
     "nextra": "^3.2.5",
     "nextra-theme-docs": "^3.2.5",
