--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.6.8",
     "framer-motion": "^11.13.5",
+    "lucide-react": "^0.485.0",
     "next": "15.1.0",
     "nextra": "^3.2.5",
     "nextra-theme-docs": "^3.2.5",
